Pages, Routing & Views - ep <34

--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "nuxt-project",
+  "name": "nuxt-course",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "Matthieu Lamerant <matthieu.lamerant@goandlive.tech>",
+  "description": "Nuxt.js course for Udemy",
+  "author": "Maximilian Schwarzmüller",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "cross-env": "^5.0.1"
   }
 }
